<resources>
    <string name="app_name">Šichtér</string>
</resources>
